--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -15,6 +15,7 @@
   background: var(--color-bg); /* Use CSS variable for background color */
   color: var(--color-text); /* Text color for dark mode */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  overflow-x:hidden;
 }
 
 .logo img {
