--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -10,6 +10,7 @@
   z-index: 1;
   padding: 0px;
   background: linear-gradient(180deg, #022b64 0%, #19379d 100%); 
+}
 
 /* Styles for the wrapper */
 .Wrapper {
